--- a/config/west.yml
+++ b/config/west.yml
@@ -4,10 +4,10 @@ manifest:
 #      url-base: https://github.com/zmkfirmware
 #    - name: codeandr3w
 #      url-base: https://github.com/codeandr3w
-#    - name: tewtham
-#      url-base: https://github.com/tewtham
-    - name: zmkfirmware
-      url-base: https://github.com/1770438260
+    - name: tewtham
+      url-base: https://github.com/tewtham
+#    - name: zmkfirmware
+#      url-base: https://github.com/1770438260
   projects:
 #    - name: zmk
 #      remote: 
@@ -25,9 +25,9 @@ manifest:
 #      remote: codeandr3w
 #      revision: joystickpr
 #      import: app/west.yml
-#    - name: zmk
-#      remote: tewtham
-#      revision: dactyl_typesafe
-#      import: app/west.yml
+    - name: zmk
+      remote: zmkfirmware
+      revision: dactyl_typesafe
+      import: app/west.yml
   self:
     path: config
