--- a/config/west.yml
+++ b/config/west.yml
@@ -17,10 +17,10 @@ manifest:
 #      remote: codeandr3w
 #      revision: mousepr-andrew
 #      import: app/west.yml
-    - name: zmk
-      remote: zmkfirmware
-      revision: mousepr-andrew
-      import: app/west.yml
+#    - name: zmk
+#      remote: zmkfirmware
+#      revision: mousepr-andrew
+#      import: app/west.yml
 #    - name: zmk-joystick
 #      remote: codeandr3w
 #      revision: joystickpr
