--- a/config/west.yml
+++ b/config/west.yml
@@ -5,7 +5,7 @@ manifest:
 #    - name: codeandr3w
 #      url-base: https://github.com/codeandr3w
     - name: tewtham
-      url-base: https://github.com/
+      url-base: https://github.com/tewtham
 #    - name: zmkfirmware
 #      url-base: https://github.com/1770438260
   projects:
