--- a/config/west.yml
+++ b/config/west.yml
@@ -2,10 +2,10 @@ manifest:
   remotes:
 #    - name: zmkfirmware
 #      url-base: https://github.com/zmkfirmware
-#    - name: codeandr3w
-#      url-base: https://github.com/codeandr3w
-    - name: tewtham
-      url-base: https://github.com/tewtham
+    - name: codeandr3w
+      url-base: https://github.com/codeandr3w
+#    - name: tewtham
+#      url-base: https://github.com/tewtham
 #    - name: zmkfirmware
 #      url-base: https://github.com/1770438260
   projects:
@@ -21,13 +21,13 @@ manifest:
 #      remote: zmkfirmware
 #      revision: mousepr-andrew
 #      import: app/west.yml
-#    - name: zmk-joystick
-#      remote: codeandr3w
-#      revision: joystickpr
-#      import: app/west.yml
-    - name: zmk
-      remote: tewtham
-      revision: dactyl_typesafe
+    - name: zmk-joystick
+      remote: codeandr3w
+      revision: joystickpr
       import: app/west.yml
+#    - name: zmk
+#      remote: tewtham
+#      revision: dactyl_typesafe
+#      import: app/west.yml
   self:
     path: config
