--- a/config/west.yml
+++ b/config/west.yml
@@ -2,25 +2,25 @@ manifest:
   remotes:
 #    - name: zmkfirmware
 #      url-base: https://github.com/zmkfirmware
-    - name: codeandr3w
-      url-base: https://github.com/codeandr3w
+#    - name: codeandr3w
+#      url-base: https://github.com/codeandr3w
 #    - name: tewtham
 #      url-base: https://github.com/tewtham
-#    - name: zmkfirmware
-#      url-base: https://github.com/1770438260
+    - name: zmkfirmware
+      url-base: https://github.com/1770438260
   projects:
 #    - name: zmk
 #      remote: 
 #      revision: main
 #      import: app/west.yml
-    - name: zmk-joystick
-      remote: codeandr3w
-      revision: mousepr-andrew
-      import: app/west.yml
-#    - name: zmk
-#      remote: zmkfirmware
+#    - name: zmk-joystick
+#      remote: codeandr3w
 #      revision: mousepr-andrew
 #      import: app/west.yml
+    - name: zmk
+      remote: zmkfirmware
+      revision: mousepr-andrew
+      import: app/west.yml
 #    - name: zmk-joystick
 #      remote: codeandr3w
 #      revision: joystickpr
