--- a/config/boards/shields/fkb/fkb.dtsi
+++ b/config/boards/shields/fkb/fkb.dtsi
@@ -24,6 +24,22 @@ RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)
            = <&pro_micro 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
            ;
 	};
+
+sensors {
+        compatible = "zmk,keymap-sensors";
+        sensors = <&joystickxy>;
+    };
+
+    joystickxy: joystickxy {
+        compatible = "joystick";
+        label = "JOYSTICKXY";
+	io-channels = <&adc 5 &adc 0>;
+	status = "disabled";
+	resolution = <512>;
+	frequency = <50>;
+	min_on = <200>;
+	num_axis = <2>;
+    };
 };
 
 &adc {
