--- a/config/boards/shields/fkb/fkb_right.conf
+++ b/config/boards/shields/fkb/fkb_right.conf
@@ -15,7 +15,7 @@ CONFIG_PMW3610=y
 #CONFIG_PMW3610_CPI=1600
 #CONFIG_PMW3610_CPI_DIVIDOR=4
 CONFIG_PMW3610_ORIENTATION_90=y
-CONFIG_PMW3610_INVERT_X=y
+#CONFIG_PMW3610_INVERT_X=y
 CONFIG_PMW3610_REST1_SAMPLE_TIME_MS=100
 CONFIG_PMW3610_REST2_SAMPLE_TIME_MS=200
 CONFIG_PMW3610_REST3_SAMPLE_TIME_MS=300
