--- a/config/boards/shields/fkb/fkb.dtsi
+++ b/config/boards/shields/fkb/fkb.dtsi
@@ -69,22 +69,33 @@ trackballs {
 	};
 };
 
-&pro_micro_i2c {
-    status = "okay";
+/* display */
+&pro_micro_spi {
+// &spi2 {
+  compatible = "nordic,nrf-spim";
+  sck-pin = <17>;
+  mosi-pin = <15>;
+  cs-gpios = <&gpio0 13 GPIO_ACTIVE_LOW>;
+  // not used, but required by spim binding; can be reuesd in the keymap for normal key press
+  miso-pin = <10>;
 
-    oled: ssd1306@3c {
-        compatible = "solomon,ssd1306fb";
-        reg = <0x3c>;
-        label = "DISPLAY";
-        width = <128>;
-        height = <32>;
-        segment-offset = <0>;
-        page-offset = <0>;
-        display-offset = <0>;
-        multiplex-ratio = <31>;
-        segment-remap;
-        com-invdir;
-        com-sequential;
-        prechargep = <0x22>;
-    };
+  // activate this device
+  status = "okay";
+
+  // spi-device: gooddisplay GDEW0102T4
+  shield_epd: il0323@0 {
+    compatible = "gooddisplay,il0323";
+    reg = <0>;
+    label = "DISPLAY";
+    spi-max-frequency = <4000000>;
+
+    height = <128>;
+    width = <80>;
+    reset-gpios = <&gpio0 8  GPIO_ACTIVE_LOW>;
+    dc-gpios    = <&gpio0 20 GPIO_ACTIVE_LOW>;
+    busy-gpios  = <&gpio0 6  GPIO_ACTIVE_LOW>;
+    pwr = [03 00 26 26];
+    cdi = <0xd2>;
+    tcon = <0x22>;
+  }; 
 };
