--- a/config/boards/shields/fkb/fkb_left.conf
+++ b/config/boards/shields/fkb/fkb_left.conf
@@ -1,14 +1,36 @@
-# Enable nice!view
+# Set the role of the split, used in choosing the dedicated status screen
+CONFIG_NRFMACRO_SHIELD_MASTER=y
+
+# Enable epaper display
 CONFIG_ZMK_DISPLAY=y
-# Disable idle blanking
-CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
+CONFIG_NRFMACRO_EPD_DISPLAY=y
+CONFIG_NRFMACRO_EPD_ROTATE_180=y
+CONFIG_MYCHANGE_DISPLAY_UPDATE_MO_BEHAVIOR=n
 
-#CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
-#CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
-#CONFIG_ZMK_WIDGET_LAYER_STATUS=n
-#CONFIG_ZMK_WIDGET_PERIPHERAL_STATUS=n
-#CONFIG_LV_USE_THEME_MONO=n
-#CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+# diplay settings (NOTE: these configurations have to be explicitly set here in shield)
+## color scheme: black/white
+CONFIG_LVGL_USE_THEME_MONO=y
+CONFIG_LVGL_THEME_DEFAULT_COLOR_PRIMARY_BLACK=y
+CONFIG_LVGL_THEME_DEFAULT_COLOR_SECONDARY_WHITE=y
+CONFIG_LVGL_THEME_DEFAULT_COLOR_PRIMARY_RED=n
+CONFIG_LVGL_THEME_DEFAULT_COLOR_SECONDARY_RED=n
+## dedicated work queue or not
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 
+## custom screen or not
+### uncommet following for custom status screen
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_LVGL_THEME_DEFAULT_FONT_NORMAL_MONTSERRAT_16=y
+CONFIG_CUSTOM_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+CONFIG_CUSTOM_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
+CONFIG_CUSTOM_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=n
+
+# Enable encoder support
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+# set transmission power to max
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
