--- a/config/boards/shields/fkb/fkb_left.conf
+++ b/config/boards/shields/fkb/fkb_left.conf
@@ -34,3 +34,6 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # set transmission power to max
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+## automatically refresh the full screen in a constant interval (unit: second), useful for epd, see pr #969
+CONFIG_ZMK_DISPLAY_FULL_REFRESH_PERIOD=15
