--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,5 +2,5 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
-    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
-    #uses: ufan/zmk/.github/workflows/build-user-config.yml@trackpad_dev
+    #uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+    uses: ufan/zmk/.github/workflows/build-user-config.yml@ptdevice-refactor
