--- a/config/west.yml
+++ b/config/west.yml
@@ -8,8 +8,8 @@ manifest:
 #      url-base: https://github.com/tewtham
 #    - name: zmkfirmware
 #      url-base: https://github.com/1770438260
-    - name: zmkfirmware
-      url-base: https://github.com/ufan
+    - name: AakashDabas
+      url-base: https://github.com/AakashDabas
       
   projects:
 #    - name: zmk
@@ -33,8 +33,8 @@ manifest:
 #      revision: dactyl_typesafe
 #      import: app/west.yml
     - name: zmk
-      remote: zmkfirmware
-      revision: ptdevice-refactor
+      remote: AakashDabas
+      revision: animated_widgets
       import: app/west.yml
   self:
     path: config
