--- a/build.yaml
+++ b/build.yaml
@@ -13,9 +13,9 @@
 #
 ---
 include:
-  - board: nrfmacro
+  - board: nrfmicro_13
     shield: fkb_left nice_view_adapter
-  - board: nrfmacro
+  - board: nrfmicro_13
     shield: fkb_right
 
 
